# instatus-minecraft

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/instatus_minecraft/: main.py
