[project]
authors = [
    {name = "Michael H.", email = "michael@iptables.sh"},
]
requires-python = "~=3.12.0"
dependencies = [
    "loguru<1.0.0,>=0.6.0",
    "requests<3.0.0,>=2.27.1",
    "mcstatus<10.0.0,>=9.4.2",
]
name = "instatus-minecraft"
version = "1.0.0"
description = "Instatus + Minecraft"
